--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - 10
 script:
-  - npm lint
-  - npm test:unit
+  - npm run lint
+  - npm run test:unit
 cache:
   directories:
     - "node_modules"
