--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target=lib 'src/index.ts'",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {},
   "devDependencies": {
@@ -21,7 +23,7 @@
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
     "vue": "^2.5.21",
-    "vue-template-compiler": "^2.5.17"
+    "vuepress": "1.0.0-alpha.32"
   },
   "peerDependencies": {
     "vue": "^2.5.21"
